-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.866 2011-02-28 02:12:25 remko Exp $
-----------------------------------------------------------------------------------------
2011-03-01	pwessel
	* GMT 4.5.6 finalized and released.  GMT cvs archive moved to GMT4
	  GMT5 branch merged to new trunk and converted to subversion.
-----------------------------------------------------------------------------------------

2011-02-28	remko
	* doc/* examples/*:	Run documentation and tests now as it is done in GMT5.

2011-02-27	pwessel
	* gmt_init.c:		Processing of mathangle symbol (-Sm[bfl]) confused the unit detector.
				Added test scripts to check for correct symbol size plotting
				under both CM and INCH environments.

2011-02-27	jluis
	* scripts/GMT_*.sh:	Replaced $AWK for awk since the $AWK variable was not
				set in those the scripts anyway.

2011-02-25	pwessel
	* x2sys/x2sys_datalist.c:	When geographic data and -R it failed to consider periodic lons.
	* x2sys/x2sys_get.c:	The -N option did not work properly, and the reported Y|N flags
				reflected the entire track on not just the portion inside the
				region.  Man page updated to clarify what is returned.
	* gmt_cdf.c:		Apply netcdf fix; thanks to Sebastian Heimann.
	* gmt_nc.c:		---"---

2011-02-25	jluis
	* gmt_grdio.c:		Increase the size of the string array in GMT_grd_get_units() to
				avoid 'Buffer overrun' that occurred with long description strings

2011-02-23	pwessel
	* spotter/backtracker.c:	For -W, now report full-length major/minor axes and not
				SEMI-axes (docs said major/minor but code did semi.)

2011-02-22	pwessel
	* gmt_init.c:		The symbol_parsing for psxy[z] did not properly set the
				column types when no symbol size was given.  This affected
				symbols that require angles (-Sw, -SE, -SJ) when unit was SI.

2011-02-17	pwessel
	* gmt_init.c:		The -: option messed up the column type arrays; should