@@ -1,5 +1,5 @@
 /*--------------------------------------------------------------------
- *	$Id: gmt_init.c,v 1.457 2011-02-27 22:59:21 guru Exp $
+ *	$Id: gmt_init.c,v 1.458 2011-03-01 03:12:37 remko Exp $
  *
  *	Copyright (c) 1991-2011 by P. Wessel and W. H. F. Smith
  *	See LICENSE.TXT file for copying and redistribution conditions.
@@ -3807,19 +3807,18 @@ void GMT_set_home (void)
 
 	/* Determine GMT_HOMEDIR (user home directory) */
 
-	if ((this = getenv ("HOME")) != CNULL) {	/* HOME was set */
+	if ((this = getenv ("HOME")) != CNULL)	/* HOME was set */
 		GMT_HOMEDIR = (char *) GMT_memory (VNULL, (size_t)(strlen (this)+1), sizeof (char), "GMT");
 		strcpy (GMT_HOMEDIR, this);
 	}
-	else {
 #ifdef WIN32
-		/* Set HOME to C:\ under Windows */
-		GMT_HOMEDIR = (char *) GMT_memory (VNULL, 4, sizeof (char), "GMT");
-		sprintf (GMT_HOMEDIR, "C:%c", DIR_DELIM);
-#else
-		fprintf (stderr, "GMT Warning: Could not determine home directory!\n");
-#endif
+	else if ((this = getenv ("HOMEPATH")) != CNULL) {	/* HOMEPATH was set */
+		GMT_HOMEDIR = (char *) GMT_memory (VNULL, (size_t)(strlen (this)+1), sizeof (char), "GMT");
+		strcpy (GMT_HOMEDIR, this);
 	}
+#endif
+	else
+		fprintf (stderr, "GMT Warning: Could not determine home directory!\n");
 
 	/* Determine GMT_USERDIR (directory containing user replacements contents in GMT_SHAREDIR) */
 
